New resources and report method changes
New icon and splash screen

--- a/src/pages/reports-flagged/reports-flagged.html
+++ b/src/pages/reports-flagged/reports-flagged.html
@@ -45,19 +45,19 @@
             <span class="data">{{report.location_id}}</span>
           </div>
           <div class="group-user group-hours">
-            <span class="label">{{'hours_header' | translate}}&nbsp;&nbsp;</span>
+            <span class="label">{{'hours_header' | translate}}</span>
             <span class="data">{{report.repair_hours}}</span>
           </div>
           <div class="group-user group-wonumber">
-            <span class="label">{{'report_label_wo_number' | translate}}&nbsp;&nbsp;</span>
+            <span class="label">{{'report_label_wo_number' | translate}}</span>
             <span class="data">{{report.work_order_number}}</span>
           </div>
           <div class="group-user group-unit">
-            <span class="label">{{'report_label_unit_number' | translate}}&nbsp;&nbsp;</span>
+            <span class="label">{{'report_label_unit_number' | translate}}</span>
             <span class="data">{{report.unit_number}}</span>
           </div>
           <div class="group-user group-notes">
-            <span class="label-notes">{{'report_label_notes' | translate}}&nbsp;&nbsp;</span>
+            <span class="label-notes">{{'report_label_notes' | translate}}</span>
             <div class="data-notes">
               <p>{{report.notes}}</p>
             </div>
