Offline boot in progress ... doing pretty good though

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -116,7 +116,7 @@
           </ion-note>
         </ion-list-header>
         <ion-list-header class="home-hours-extended">
-          {{"extended_hours" | translate}} :
+          {{"premium_hours" | translate}} :
           <ion-note item-end>
             {{ period.getBonusHours() }}
           </ion-note>
