--- a/src/pages/reports-flagged/reports-flagged.html
+++ b/src/pages/reports-flagged/reports-flagged.html
@@ -12,67 +12,82 @@
     <ion-list class="report-list" *ngIf="reports && reports.length">
       <ion-item-sliding #reportItem class="report-item-sliding" *ngFor="let report of reports; let i=index">
         <ion-item class="report-item" (tap)="itemTapped(report, $event)">
-          <table class="report-table">
-            <tbody>
-              <tr *ngIf="prefs.getShowID()">
-                <td class="label">ID</td>
-                <td class="data" >{{report._id}}</td>
-              </tr>
-              <tr *ngIf="prefs.getShowRev()">
-                <td class="label">Rev</td>
-                <td class="data" >{{report._rev}}</td>
-              </tr>
-              <tr *ngIf="prefs.getShowTimes()">
-                <td class="label">Date</td>
-                <td class="data" >{{report.report_date}}</td>
-              </tr>
-              <tr *ngIf="prefs.getShowTimes()">
-                <td class="label">Start</td>
-                <td class="data" >{{report.time_start}}</td>
-              </tr>
-              <tr *ngIf="prefs.getShowTimes()">
-                <td class="label">End</td>
-                <td class="data" >{{report.time_end}}</td>
-              </tr>
-              <tr *ngIf="prefs.getShowSite()">
-                <td class="label">Client</td>
-                <td class="data" >{{report.client}}</td>
-              </tr>
-              <tr *ngIf="prefs.getShowSite()">
-                <td class="label">Location</td>
-                <td class="data" >{{report.location}}</td>
-              </tr>
-              <tr *ngIf="prefs.getShowSite()">
-                <td class="label">LocID</td>
-                <td class="data" >{{report.location_id}}</td>
-              </tr>
-              <tr>
-                <td class="label">Date</td>
-                <td class="data" >{{report.report_date}}</td>
-              </tr>
-              <tr>
-                <td class="label">{{'hours_header' | translate}}</td>
-                <td class="data" >{{report.repair_hours}}</td>
-              </tr>
-              <tr>
-                <td class="label">{{'report_label_wo_number' | translate}}</td>
-                <td class="data" >{{report.work_order_number}}</td>
-              </tr>
-              <tr>
-                <td class="label">{{'report_label_unit_number' | translate}}</td>
-                <td class="data" >{{report.unit_number}}</td>
-              </tr>
-              <tr class="notes">
-                <td class="label">{{'report_label_notes' | translate}}</td>
-                <td class="data"></td>
-              </tr>
-              <tr>
-                <td class="data-notes" colspan="2" >
-                  <span class="notes-wrapper">{{report.notes}}</span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="report-wrapper">
+            <table class="report-table">
+              <tbody>
+                <tr *ngIf="prefs.getShowID()">
+                  <td class="label">ID</td>
+                  <td class="data" >{{report._id}}</td>
+                </tr>
+                <tr *ngIf="prefs.getShowRev()">
+                  <td class="label">Rev</td>
+                  <td class="data" >{{report._rev}}</td>
+                </tr>
+                <tr *ngIf="prefs.getShowTimes()">
+                  <td class="label">Date</td>
+                  <td class="data" >{{report.report_date}}</td>
+                </tr>
+                <tr *ngIf="prefs.getShowTimes()">
+                  <td class="label">Start</td>
+                  <td class="data" >{{report.time_start}}</td>
+                </tr>
+                <tr *ngIf="prefs.getShowTimes()">
+                  <td class="label">End</td>
+                  <td class="data" >{{report.time_end}}</td>
+                </tr>
+                <tr *ngIf="prefs.getShowSite()">
+                  <td class="label">Client</td>
+                  <td class="data" >{{report.client}}</td>
+                </tr>
+                <tr *ngIf="prefs.getShowSite()">
+                  <td class="label">Location</td>
+                  <td class="data" >{{report.location}}</td>
+                </tr>
+                <tr *ngIf="prefs.getShowSite()">
+                  <td class="label">LocID</td>
+                  <td class="data" >{{report.location_id}}</td>
+                </tr>
+                <tr>
+                  <td class="label">Date</td>
+                  <td class="data" >{{report.report_date}}</td>
+                </tr>
+                <tr>
+                  <td class="label">{{'hours_header' | translate}}</td>
+                  <td class="data" >{{report.repair_hours}}</td>
+                </tr>
+                <tr>
+                  <div *ngIf="report.crew_number && report.crew_number !== ''; then woNumberTemplate; else crewNumberTemplate">
+                    <ng-template #woNumberTemplate>
+                      <td class="label">{{'report_label_wo_number' | translate}}</td>
+                      <td class="data" >{{report.work_order_number}}</td>
+                    </ng-template>
+                    <ng-template #crewNumberTemplate>
+                      <td class="label">{{'crew_number' | translate}}</td>
+                      <td class="data" >{{report.crew_number}}</td>
+                    </ng-template>
+                  </div>
+                </tr>
+                <tr>
+                  <td class="label">{{'report_label_unit_number' | translate}}</td>
+                  <td class="data" >{{report.unit_number}}</td>
+                </tr>
+                <tr class="notes">
+                  <td class="label label-notes">{{'report_label_notes' | translate}}</td>
+                  <td class="data data-notes"><span class="notes-wrapper">{{report.notes}}</span></td>
+                </tr>
+
+                <!-- <tr class="notes">
+                  <td class="label">{{'report_label_notes' | translate}}</td>
+                  <td class="data"></td>
+                </tr>
+                <tr>
+                  <td class="data-notes" colspan="2" >
+                    <span class="notes-wrapper">{{report.notes}}</span>
+                  </td>
+                </tr> -->
+              </tbody>
+            </table>
+          </div>
         </ion-item>
         <ion-item-options side="right">
           <button ion-button color="danger" (tap)="deleteReport(report, $event)">
