--- a/src/pages/tech-settings/tech-settings.html
+++ b/src/pages/tech-settings/tech-settings.html
@@ -19,39 +19,46 @@
         <ion-input class="user-settings-input" type="text" [(ngModel)]="lastName">{{lastName}} </ion-input>
       </ion-item>
       <ion-item class="tech-settings-select-item">
+        <ion-label class="manual-float-label">{{'work_site' | translate}}</ion-label>
+        <!-- <ion-select [compareWith]="_cmp" class="user-settings-select" [(ngModel)]="client" (ngModelChange)="updateClient(client)"> -->
+        <ion-select class="user-settings-select" [(ngModel)]="site" (ngModelChange)="updateSite(site, $event)">
+          <ion-option *ngFor="let site of sites" [value]="site"> {{site?.getSiteSelectName()}} </ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item class="tech-settings-select-item">
         <ion-label class="manual-float-label">{{'tech_settings_client' | translate}}</ion-label>
         <ion-select [compareWith]="_cmp" class="user-settings-select" [(ngModel)]="client" (ngModelChange)="updateClient(client)">
-          <ion-option *ngFor="let client of clients" [value]="client"> {{client.fullName.toUpperCase()}} </ion-option>
+          <ion-option *ngFor="let client of clients" [value]="client"> {{client?.fullName?.toUpperCase()}} </ion-option>
         </ion-select>
       </ion-item>
       <ion-item class="tech-settings-select-item">
         <ion-label class="manual-float-label">{{'tech_settings_location' | translate}}</ion-label>
         <ion-select [compareWith]="_cmp" class="user-settings-select" [(ngModel)]="location" (ngModelChange)="updateLocation(location)">
-          <ion-option *ngFor="let location of locations" [value]="location"> {{location.fullName.toUpperCase()}} </ion-option>
+          <ion-option *ngFor="let location of locations" [value]="location"> {{location?.fullName?.toUpperCase()}} </ion-option>
         </ion-select>
       </ion-item>
       <ion-item class="tech-settings-select-item">
         <ion-label class="manual-float-label">{{'tech_settings_location_id' | translate}}</ion-label>
         <ion-select [compareWith]="_cmp" class="user-settings-select" [(ngModel)]="locID" (ngModelChange)="updateLocID(locID)">
-          <ion-option *ngFor="let locID of locIDs" [value]="locID"> {{locID.fullName.toUpperCase()}} </ion-option>
+          <ion-option *ngFor="let locID of locIDs" [value]="locID"> {{locID?.fullName?.toUpperCase()}} </ion-option>
         </ion-select>
       </ion-item>
       <ion-item class="tech-settings-select-item">
         <ion-label class="manual-float-label">{{'tech_settings_shift' | translate}}</ion-label>
         <ion-select class="user-settings-select" [(ngModel)]="shift">
-          <ion-option *ngFor="let shift of shiftTimes" [value]="shift"> {{shift.fullName.toUpperCase()}} </ion-option>
+          <ion-option *ngFor="let shift of shiftTimes" [value]="shift"> {{shift?.fullName?.toUpperCase()}} </ion-option>
         </ion-select>
       </ion-item>
       <ion-item class="tech-settings-select-item">
         <ion-label class="manual-float-label">{{'tech_settings_shift_length' | translate}}</ion-label>
         <ion-select class="user-settings-select" [(ngModel)]="shiftLength">
-          <ion-option *ngFor="let shiftLength of shiftLengths" [value]="shiftLength"> {{shiftLength.fullName.toUpperCase()}} </ion-option>
+          <ion-option *ngFor="let shiftLength of shiftLengths" [value]="shiftLength"> {{shiftLength?.fullName?.toUpperCase()}} </ion-option>
         </ion-select>
       </ion-item>
       <ion-item class="tech-settings-select-item">
         <ion-label class="manual-float-label">{{'tech_settings_shift_start_time' | translate}}</ion-label>
         <ion-select class="user-settings-select" [(ngModel)]="shiftStartTime">
-          <ion-option *ngFor="let shiftStartTime of shiftStartTimes" [value]="shiftStartTime"> {{shiftStartTime.fullName.toUpperCase()}} </ion-option>
+          <ion-option *ngFor="let shiftStartTime of shiftStartTimes" [value]="shiftStartTime"> {{shiftStartTime?.fullName?.toUpperCase()}} </ion-option>
         </ion-select>
       </ion-item>
     </ion-list>
